# webp_encoder

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  pages.yml
cli/: image.cpp  image.hpp  main.cpp
docs/: index.html
docs/css/: main.css
docs/js/: main.js  webp_encoder.js
docs/test/: index.html
docs/test/css/: main.css
docs/test/js/: main.js
src/: webp_encoder.cpp  webp_encoder.hpp
wasm/: main.cpp
